[package]
name = "symspell"
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = [
  "Rene Klacan <rene.klacan@gmail.com>",
  "Michael Chernigin <michaelchernigin@gmail.com>",
]
keywords = ["spellcheck"]
description = "Spelling correction & Fuzzy search"
repository = "https://github.com/mchernigin/symspell"
exclude = ["data/*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
strsim = "^0.10"
derive_builder = "^0.12"
serde = { version = "1.0", features = ["derive"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
unidecode = "^0.3"

[target.wasm32-unknown-unknown.dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
wasm-bindgen = { version = "^0.2", features = ["serde-serialize"] }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "^0.3"
